src/objects/Contracted_Quote_c_x__x.object
<CustomObject>
    <fields>
        <fullName>Surround_Priced_Account_Name_c_c__c</fullName>
        <externalDeveloperName>Surround_Priced_Account_Name_c__c</externalDeveloperName>
        <label>Surround Priced Account Name</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Surround_Priced_Account_c_c__c</fullName>
        <externalDeveloperName>Surround_Priced_Account_c__c</externalDeveloperName>
        <label>Surround Priced Account</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Surround_QTC_Code_c_c__c</fullName>
        <externalDeveloperName>Surround_QTC_Code_c__c</externalDeveloperName>
        <label>Surround QTC Code</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SystemModstamp_c__c</fullName>
        <externalDeveloperName>SystemModstamp__c</externalDeveloperName>
        <label>System Modstamp</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Total_Sales_Order_PO_Amount_EUR_c_c__c</fullName>
        <externalDeveloperName>Total_Sales_Order_PO_Amount_EUR_c__c</externalDeveloperName>
        <label>Total Sales Order PO Amount EUR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Sales_Order_PO_Amount_USD_c_c__c</fullName>
        <externalDeveloperName>Total_Sales_Order_PO_Amount_USD_c__c</externalDeveloperName>
        <label>Total Sales Order PO Amount USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Work_Start_Date_c_c__c</fullName>
        <externalDeveloperName>Work_Start_Date_c__c</externalDeveloperName>
        <label>Work Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>eQuote_Error_Timestamp_c_c__c</fullName>
        <externalDeveloperName>eQuote_Error_Timestamp_c__c</externalDeveloperName>
        <label>eQuote Error Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>eQuote_Error_c_c__c</fullName>
        <externalDeveloperName>eQuote_Error_c__c</externalDeveloperName>
        <label>eQuote Error</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eQuote_Status_Text_c__c</fullName>
        <externalDeveloperName>eQuote_Status_Text__c</externalDeveloperName>
        <label>eQuote Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eQuote_c_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>eQuote_c__c</externalDeveloperName>
        <label>eQuote?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>opportunityExternalID_c_c__c</fullName>
        <externalDeveloperName>opportunityExternalID_c__c</externalDeveloperName>
        <label>Opportunity</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Surround CQ</label>
    <pluralLabel>Surround CQs</pluralLabel>
</CustomObject>